Adding changes to support app screens

--- a/android/android-screensharing-annotations/SampleApp/src/main/res/values/strings.xml
+++ b/android/android-screensharing-annotations/SampleApp/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">SampleApp</string>
+    <string name="app_name">Sample app</string>
     <string name="network_quality">Network connection is unstable.</string>
 </resources>
